add folder and devtools

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>mms_frontend</title>
   </head>
   <body>
-    <div id="app">哈哈哈哈哈</div>
+    <div id="app">正在跳转，请耐心等待！！！</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
