--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>mms_frontend</title>
+    <title>库存管理系统</title>
+    <link rel="icon" href="./static/bitbug_favicon.ico" rel="external nofollow" rel="external nofollow" type="image/x-icon" />
+    <link rel="shortcut icon" href="./static/bitbug_favicon.ico" rel="external nofollow" rel="external nofollow" type="image/x-icon"/><!-- 必须 -->
   </head>
   <body>
     <div id="app">正在跳转，请耐心等待！！！</div>
